# Trinity

./: .gitignore  LICENSE  README.en.md  README.md  pyproject.toml
.github/: required-smoke-tests.txt
.github/workflows/: cross-platform-smoke.yml  full-validation.yml  publish-pypi.yml
docs/: checkpoint.md  phase-6-plan.md  reference-architecture.md  slash-command-reference.md  troubleshooting-provider-readiness.md  workflow-v0.10.2-guide.md  workflow-v0.7.0-guide.md
docs/development/: analyze-picker-new-brief.md  ci-and-maintenance-strategy.md  direct-analyze-new-brief.md  execute-ack-preflight-visibility.md  execution-preflight-confirmation.md  execution-risk-confirmation-gate.md  execution-run-estimate.md  existing-analysis-anchor-review.md  existing-analysis-prompt-anchors.md  existing-analysis-read-preview.md  existing-analysis-start-prompt.md  existing-analysis-target-prompt.md  existing-intake-drift-preflight.md  existing-project-diagnostic-summary.md  existing-read-first-checklist.md  existing-read-first-confirmation.md  existing-read-first-evidence.md  existing-read-first-preview.md  existing-scope-anchor-review.md  existing-scope-candidates.md  existing-scope-choice-label.md  existing-scope-choice-rail.md  existing-scope-picker.md  existing-scope-preflight-label.md  existing-selected-scope.md  facade-drift-audit.md  fake-provider-test-environment.md  korean-ui-glossary.md  launch-cwd-workspace-priority.md  legacy-runtime-surface-audit.md  new-brief-generation-preview.md  new-brief-missing-field-prompt.md  new-brief-readiness-modal.md  new-brief-start-prompt.md  new-brief-starter-recommendations.md  new-project-brief-after-create.md  new-project-brief-validation-context.md  new-project-dry-run-detail.md  new-project-generation-confirmation.md  new-project-generation-conflict-preview.md  (+51 more)
docs/plans/: 2026-06-02-phase-10-interactive-redesign.md  2026-06-02-prompt-compression.md  2026-06-02-token-analytics.md  2026-06-02-token-optimization-phase7b.md  2026-06-02-tui-overhaul.md  2026-06-02-v0.6.9-interactive-error-analysis.md  2026-06-03-phase10-remaining.md  2026-06-03-v0.7.0-workflow-engine-redesign.md  2026-06-04-blueprint-to-parallel-implementation.md  2026-06-04-isolated-provider-bootstrap.md  2026-06-04-model-backed-synthesis.md  2026-06-04-one-shot-provider-redesign.md  2026-06-04-session-like-workflow-ui.md  2026-06-04-target-workspace-boundary.md  2026-06-04-v0.7.0-follow-up-implementation-candidates.md  2026-06-05-cross-platform-stability-redesign.md  2026-06-05-deliberation-report.md  2026-06-05-replace-gemini-with-antigravity.md  2026-06-05-sacred-geometry-animation-design.md  2026-06-05-sacred-geometry-animation-plan.md  2026-06-05-textual-workbench-execution-analysis.md  2026-06-05-textual-workbench-ui.md  2026-06-06-project-improvement-hardening.md  2026-06-06-provider-cli-slash-command-backlog.md  2026-06-06-wp-graph-synthesis.md  (+230 more)
scripts/: classify_ci_change.py  run_required_smoke_tests.py
templates/: trinity.config.example
tests/: __init__.py  conftest.py  test_agent_factory.py  test_agent_model_choice_cache.py  test_agent_recipient_model_selector_cache.py  test_agent_toggle.py  test_analytics.py  test_antigravity_agent.py  test_blueprint_decomposer.py  test_bridge_engine.py  test_budget.py  test_central_agent_view.py  test_ci_change_classifier.py  test_claude_agent.py  test_cli.py  test_cli_detector.py  test_cli_loop.py  test_cli_v2.py  test_codex_agent.py  test_completion.py  test_compressor.py  test_config.py  test_consensus_v2.py  test_context_commands.py  test_context_memory.py  test_context_monitor.py  test_context_packing.py  test_context_profiles.py  test_deliberation.py  test_deliberation_protocol_events.py  test_e2e.py  test_error_handling.py  test_execution_activity_log.py  test_execution_chrome.py  test_execution_confirm_modal.py  test_execution_log_modal_cache.py  test_execution_matrix_state_cache.py  test_execution_package_row.py  test_execution_protocol.py  test_execution_retry_modal.py  (+146 more)
(+456 files in other folders)
