[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trinity-agent"
version = "1.0.373"
description = "Three minds, one context — Multi-agent AI orchestrator for Claude Code, Codex, and Antigravity CLI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Trinity Contributors" },
]
keywords = ["ai", "multi-agent", "orchestrator", "claude", "codex", "antigravity", "deliberation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1",
    "prompt_toolkit>=3.0",
    "rich>=13.0",
    "textual>=8.2.7",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/hongdangmoo49/Trinity"
Repository = "https://github.com/hongdangmoo49/Trinity"
Issues = "https://github.com/hongdangmoo49/Trinity/issues"

[project.scripts]
trinity = "trinity.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/trinity"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=6.0",
]
